# ipa-api-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  dependencies.py
app/routers/: auth.py  bulk.py  reports.py  templates.py  users.py
app/services/: email.py  freeipa.py  yopass.py
app/utils/: excel.py  transliteration.py
frontend/: app.py  streamlit_app.py
templates/: identifiers_template.xlsx  password_reset_email.txt
