[project]
name = "conductor"
version = "0.1.0"
description = "Conductor - система сброса паролей и операторских действий для FreeIPA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.123.4",
    "openpyxl>=3.1.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-freeipa>=1.0.10",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "uvicorn>=0.38.0",
]
